--- a/7bibliography.tex
+++ b/7bibliography.tex
@@ -19,7 +19,7 @@
 
 \bibitem{giraphpp} Y. Tian, A. Balmin, S. A. Corsten, S. Tatikonda, J. McPherson: \textit{From "Think Like a Vertex" to "Think Like a Graph"}, Proceedings of the VLDB Endowment, 2013
 
-\bibitem{gps}, S. Salihoglun J. Widom: \textit{GPS: A Graph Processing System.} SSDBM, July 2013
+\bibitem{gps}S. Salihoglun J. Widom: \textit{GPS: A Graph Processing System.} SSDBM, July 2013
 
 \bibitem{deltastep} U. Meyer, P. Sanders: \textit{Delta-stepping: A parallel single source shortest path algorithm.} ESA, 1998.
 
